Bug 29326 - On Leopard, media element can't handle audio/mp4 MIME type in source tag
Summary: On Leopard, media element can't handle audio/mp4 MIME type in source tag
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords:
Depends on:
Blocks: html5test
  Show dependency treegraph
 
Reported: 2009-09-16 21:55 PDT by David Gatwood
Modified: 2010-07-28 09:02 PDT (History)
2 users (show)

See Also:


Attachments
proposed patch (7.97 KB, patch)
2010-07-13 10:44 PDT, Eric Carlson
mitz: review+
Details | Formatted Diff | Diff
revised patch (7.98 KB, patch)
2010-07-13 10:50 PDT, Eric Carlson
simon.fraser: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description David Gatwood 2009-09-16 21:55:50 PDT
This block of code works only if you remove the type attribute from the first source tag.  By my reading of RFC 4337, that's a completely valid MIME type to use for MPEG 4 audio.  It works with audio/mpeg, but that seems like a bit of a hack.

<audio id="aud_01"
    controls="true"
    width="200"
    height="60" >
<source
    src="http://images.gatwood.net/gatwood.net/music/Cinderella%20Suite.m4a"
    type="audio/mp4"
    media="screen"></source>
<source
    src="http://images.gatwood.net/gatwood.net/music/Cinderella%20Suite.ogg"
    type="audio/ogg"
    media="screen"></source>

<embed id="mov_01" src="http://images.gatwood.net/gatwood.net/music/Cinderella%20Suite.m4a" autostart=false height="60"></embed>
</audio>


See http://www.rfc-editor.org/rfc/rfc4337.txt
Comment 1 David Gatwood 2009-09-16 21:56:24 PDT
This is actually in Safari 4.0.3, but that version isn't in the version list.
Comment 2 Trevor Downs 2010-07-06 19:20:19 PDT
I'm getting the same bug in WebKit 533 (Safari 5) as well.
Comment 3 Trevor Downs 2010-07-06 19:20:47 PDT
(In reply to comment #2)
> I'm getting the same bug in WebKit 533 (Safari 5) as well.

Oh: Mac OS X 10.5.8 PPC.
Comment 4 Eric Carlson 2010-07-06 20:40:20 PDT
This works correctly on 10.6.4, I wonder if UTI doesn't include "audio/mp4" on Leopard?
Comment 5 Trevor Downs 2010-07-07 08:04:24 PDT
(In reply to comment #4)
> This works correctly on 10.6.4, I wonder if UTI doesn't include "audio/mp4" on Leopard?

Where would I look in 10.5 to confirm this?
Comment 6 Eric Carlson 2010-07-13 10:44:07 PDT
Created attachment 61395 [details]
proposed patch
Comment 7 Eric Carlson 2010-07-13 10:50:18 PDT
Created attachment 61396 [details]
revised patch
Comment 8 Eric Carlson 2010-07-13 13:16:54 PDT
http://trac.webkit.org/changeset/63239