2010-07-13  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Dan Bernstein.

        On Leopard, media element can't handle audio/mp4 MIME type in source tag
        https://bugs.webkit.org/show_bug.cgi?id=29326

        Test: media/media-can-play-mpeg-audio.html

        * platform/MIMETypeRegistry.cpp:
        (WebCore::TypeExtensionPair::): Add "audio/mp4", "m4a" to mappings table.

2010-07-13  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        On Leopard, media element can't handle audio/mp4 MIME type in source tag
        https://bugs.webkit.org/show_bug.cgi?id=29326

        Rename media-can-play-mp3 to media-can-play-mpeg-audio and add "audio/mp4" and "audio/aac" tests.

        * media/media-can-play-mp3-expected.txt: Removed.
        * media/media-can-play-mp3.html: Removed.
        * media/media-can-play-mpeg-audio-expected.txt: Copied from LayoutTests/media/media-can-play-mp3-expected.txt.
        * media/media-can-play-mpeg-audio.html: Copied from LayoutTests/media/media-can-play-mp3.html.
        * platform/gtk/Skipped:
        * platform/qt/Skipped:



Canonical link: https://commits.webkit.org/54095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63239 268f45cc-cd09-0410-ab3c-d52691b4dbfc